--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,61 +6,109 @@
 
 <body>
 
-  <%- include ("../partials/nav.ejs") %>
-
-<div class="jumbotron text-center">
-  <div class="container">
-    <a href="/" class="lang-logo">
-      <img src="/lang-logo.png">
-    </a>
-    <h1>Getting Started on Heroku with Node.js</h1>
-    <p>This is a sample Node application deployed to Heroku. It's a reasonably simple app - but a good foundation for understanding how to get the most out of the Heroku platform.</p>
-    <a type="button" class="btn btn-lg btn-default" href="https://devcenter.heroku.com/articles/getting-started-with-nodejs"><span class="glyphicon glyphicon-flash"></span> Getting Started on Heroku with Node.js</a>
-    <a type="button" class="btn btn-lg btn-primary" href="https://github.com/heroku/node-js-getting-started"><span class="glyphicon glyphicon-download"></span> Source on GitHub</a>
-  </div>
-</div>
 <div class="container">
   <div class="alert alert-info text-center" role="alert">
-    To deploy your own copy, and learn the fundamentals of the Heroku platform, head over to the <a href="https://devcenter.heroku.com/articles/getting-started-with-nodejs" class="alert-link">Getting Started on Heroku with Node.js</a> tutorial.
+	Welcome to MobCache :-)
   </div>
   <hr>
   <div class="row">
     <div class="col-md-6">
-      <h3><span class="glyphicon glyphicon-info-sign"></span> How this sample app works</h3>
-      <ul>
-        <li>This app was deployed to Heroku, either using Git or by using <a href="https://github.com/heroku/node-js-getting-started">Heroku Button</a> on the repository.</li>
+      <h3><span class="glyphicon glyphicon-info-sign"></span> Messaging</h3>
+	  <!-- message form -->
+		<form name="publish">
+		  <input type="text" name="message">
+		  <input type="submit" value="Send">
+		</form>
 
-        <li>When Heroku received the source code, it fetched all the dependencies in the <a href="https://github.com/heroku/node-js-getting-started/blob/main/package.json">package.json</a>, creating a deployable slug.</li>
-        <li>The platform then spins up a dyno, a lightweight container that provides an isolated environment in which the slug can be mounted and executed.</li>
-        <li>You can scale your app, manage it, and deploy over <a href="https://addons.heroku.com/">150 add-on services</a>, from the Dashboard or CLI.</li>
-      </ul>
+		<!-- div with messages -->
+		<div id="messages" style="height: 750px"></div>
     </div>
     <div class="col-md-6">
-      <h3><span class="glyphicon glyphicon-link"></span> Next Steps</h3>
-      <ul>
-        <li>If you are following the <a href="https://devcenter.heroku.com/articles/getting-started-with-nodejs">Getting Started</a> guide, then please head back to the tutorial and follow the next steps!</li>
-        <li>If you deployed this app by deploying the Heroku Button, then in a command line shell, run:</li>
-        <ul>
-          <li><code>git clone https://github.com/heroku/node-js-getting-started.git</code> - this will create a local copy of the source code for the app</li>
-          <li><code>cd node-js-getting-started</code> - change directory into the local source code repository</li>
-          <li><code>heroku git:remote -a &lt;your-app-name></code> - associate the Heroku app with the repository</li>
-          <li>You'll now be set up to run the app locally, or <a href="https://devcenter.heroku.com/articles/getting-started-with-nodejs#push-local-changes">deploy changes</a> to Heroku</li>
-        </ul>
-      </ul>
-      <h3><span class="glyphicon glyphicon-link"></span> Helpful Links</h3>
-      <ul>
-        <li><a href="https://www.heroku.com/home">Heroku</a></li>
-        <li><a href="https://devcenter.heroku.com/">Heroku Dev Center</a></li>
-        <li><a href="https://devcenter.heroku.com/articles/getting-started-with-nodejs">Getting Started on Heroku with Node.js</a></li>
-        <li><a href="https://devcenter.heroku.com/articles/deploying-nodejs">Deploying Node Apps on Heroku</a></li>
-      </ul>
+      <h3><span class="glyphicon glyphicon-link"></span> Distances From Me</h3>
+	  
+	  <!-- div with distances -->
+	  <div id="distances" style="height: 750px"></div>
     </div>
   </div> <!-- row -->
    <div class="alert alert-info text-center" role="alert">
-    Please do work through the Getting Started guide, even if you do know how to build such an application.  The guide covers the basics of working with Heroku, and will familiarize you with all the concepts you need in order to build and deploy your own apps.
+		NodeJS Application with WebSocket chat channel, and distance tracker between other users.
   </div>
 </div>
 
+<script>
+	function removeAllChildNodes(parent) {
+		while (parent.firstChild) {
+			parent.removeChild(parent.firstChild);
+		}
+	}
+	
+
+	let socket = new WebSocket("ws://" + document.location.hostname + ":5010?name=" + faker.name.findName());
+	
+	function updatePosition(position) {
+	  var latitude = position.coords.latitude;
+	  var longitude = position.coords.longitude;
+
+		
+		let locationMessage = {
+			type: "location",
+			latitude: latitude,
+			longitude: longitude
+		}
+		
+		socket.send(JSON.stringify(locationMessage));
+	}
+	
+	// send message from the form
+	document.forms.publish.onsubmit = function() {
+	  let outgoingMessage = {
+		type: "chat",
+		content: this.message.value
+	  }
+
+	  socket.send(JSON.stringify(outgoingMessage));
+	  return false;
+	};
+	
+	socket.onopen = function(event) {
+		
+		// Update User Location every 1 minute ... note this could be done better with watch function see geolocation watch for javascript
+		// 	it does use more battery life now, so it might be worth while building in functionality for players to enable / disable 
+		// 	their location updates (i.e. partipate / stay out)
+		
+		navigator.geolocation.getCurrentPosition(updatePosition);
+		
+		const interval = setInterval(function() {
+			navigator.geolocation.getCurrentPosition(updatePosition);
+		}, 60000);
+		
+		// clearInterval(interval); // to disable
+	}
+
+	// message received - show the message in div#messages
+	socket.onmessage = function(event) {
+	  let incomingMessage = JSON.parse(event.data);
+	  console.log(incomingMessage)
+	  
+	  if(incomingMessage.type == "chat") {
+		let messageElem = document.createElement('div');
+		messageElem.textContent = incomingMessage.content;
+		document.getElementById('messages').prepend(messageElem);
+	  }
+	  if(incomingMessage.type == "distance") {
+		const container = document.getElementById('distances');
+		removeAllChildNodes(container);
+		incomingMessage.content.forEach(function(location) {
+				let messageElem = document.createElement('div');
+			messageElem.textContent = "I'm " + location["distance (m2)"] + " metres away from " + location["description"];
+			container.prepend(messageElem);
+		});
+
+	  }
+	  
+	}
+
+</script>
 
 </body>
 </html>
