--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,7 +8,7 @@
 
 <div class="container">
   <div class="alert alert-info text-center" role="alert">
-	Welcome to MobCache :-)
+	Welcome to the Anti Social Mob Cache :-)
   </div>
   <hr>
   <div class="row">
@@ -24,7 +24,7 @@
 		<div id="messages" style="height: 750px"></div>
     </div>
     <div class="col-md-6">
-      <h3><span class="glyphicon glyphicon-link"></span> Distances From Me</h3>
+      <h3><span class="glyphicon glyphicon-link"></span> Distance from WayPoints</h3>
 	  
 	  <!-- div with distances -->
 	  <div id="distances" style="height: 750px"></div>
