--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -31,7 +31,7 @@
     </div>
   </div> <!-- row -->
    <div class="alert alert-info text-center" role="alert">
-		NodeJS Application with WebSocket chat channel, and distance tracker between other users.
+		 Developed by Pprime` with help.  Hosted by Heroku. (c) 2021 All rights reserved.
   </div>
 </div>
 
