--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -25,6 +25,9 @@
 </div>
 
 <script>
+    var host = location.origin.replace(/^http/, 'ws')
+    var socket = new WebSocket(host + "?name=" + faker.name.findName());
+
 	function updatePosition(position) {
 	  var latitude = position.coords.latitude;
 	  var longitude = position.coords.longitude;
