--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -19,16 +19,19 @@
   </div>
 
   <div id="lj-startup">
-      <h1 class="display-7">Start your own anti social group!</h1>
+      <!-- Remove option to create own game/room -->
+      <h1 class="display-7">Enter the Game ID Reference Number:</h1>
       <form id="start-group-form">
           <button type="submit" class="btn btn-primary" href="#" role="button">Start Group</button>
       </form>
       <hr class="my-4">
-      <h1 class="display-7">Join your friends anti social group!</h1>
+      <!-- snip -->
+      
+      <h1 class="display-7">Enter the Geocaching ID Code for the Anti-Social mob you wish to play:</h1>
       <form id="join-group-form">
           <div class="form-group">
               <input type="text" class="form-control" id="groupId" aria-describedby="Group Code">
-              <small class="form-text text-muted">Ask your friend for their code!</small>
+              <small class="form-text text-muted">Use GCTEST for the testing game</small>
           </div>
           <button type="submit" class="btn btn-primary" href="#" role="button">Join Group</button>
       </form>
