--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -38,9 +38,13 @@
   </div>
 
   <div id="lj-in-game" style="display: none">
-      <p>Group Code: <span id="current-group-id" class="badge badge-secondary"></span> <span><button type="button" class="btn btn-primary btn-clipboard" data-clipboard-target="#current-group-id">Copy</button></span></p>
-
-      <p>Your group currently has <span id="current-group-member-count" class="badge badge-info"></span> members</p>
+      <p>Game Code: <span id="current-group-id" class="badge badge-secondary"></span>
+<!-- <span><button type="button" class="btn btn-primary btn-clipboard" data-clipboard-target="#current-group-id">Copy</button></span> -->
+</p>
+      <p>This game currently has <span id="current-group-member-count" class="badge badge-info"></span> active players</p>
+      <P>You are located at: <span id="current-location-and-time" </span></p>
+      <p>Your distance from each waypoint currently is:</p>
+      <!-- Insert Table of each waypoint, show coords and radius target and current distance -->
   </div>
 
    <div class="alert alert-info text-center" role="alert">
