--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -15,7 +15,7 @@
 
 <div class="container-fluid">
   <div class="alert alert-info text-center" role="alert">
-	   Welcome to the Anti Social Mob Cache :-)
+	  <H1> Welcome to the Anti Social Mob Cache </H1>
   </div>
 
   <div id="lj-startup">
@@ -42,13 +42,13 @@
 <!-- <span><button type="button" class="btn btn-primary btn-clipboard" data-clipboard-target="#current-group-id">Copy</button></span> -->
 </p>
       <p>This game currently has <span id="current-group-member-count" class="badge badge-info"></span> active players</p>
-      <P>You are located at: <span id="current-location-and-time" </span></p>
+      <P>You are located at: <span id="current-location-and-time" class="badge badge-info" </span></p>
       <p>Your distance from each waypoint currently is:</p>
       <!-- Insert Table of each waypoint, show coords and radius target and current distance -->
   </div>
 
    <div class="alert alert-info text-center" role="alert">
-		  Developed by Pprime` with help.  Hosted by Heroku. (c) 2021 All rights reserved.
+		  <i>Developed by Pprime` with help.  Hosted by Heroku. (c) 2021 All rights reserved.</i>
   </div>
 </div>
 
