--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -43,8 +43,10 @@
 </p>
       <p>This game currently has <span id="current-group-member-count" class="badge badge-info"></span> active players</p>
       <P>You are located at: <span id="current-location-and-time" class="badge badge-info" </span></p>
+      
       <p>Your distance from each waypoint currently is:</p>
-      <!-- Insert Table of each waypoint, show coords and radius target and current distance -->
+      <!-- Insert List of each waypoint, show coords and radius target and current distance -->
+      <p><span id="waypoint-information" > </span></p>
   </div>
 
    <div class="alert alert-info text-center" role="alert">
