--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -19,7 +19,7 @@
   </div>
 
   <div id="lj-startup">
-      <!-- Remove option to create own game/room -->
+      <!-- Remove option to create own game/room
       <h1 class="display-7">Enter the Game ID Reference Number:</h1>
       <form id="start-group-form">
           <button type="submit" class="btn btn-primary" href="#" role="button">Start Group</button>
@@ -33,7 +33,7 @@
               <input type="text" class="form-control" id="groupId" aria-describedby="Group Code">
               <small class="form-text text-muted">Use GCTEST for the testing game</small>
           </div>
-          <button type="submit" class="btn btn-primary" href="#" role="button">Join Group</button>
+          <button type="submit" class="btn btn-primary" href="#" role="button">Start Game</button>
       </form>
   </div>
 
@@ -50,7 +50,7 @@
   </div>
 
    <div class="alert alert-info text-center" role="alert">
-		  <i>Developed by Pprime` with help.  Hosted by Heroku. (c) 2021 All rights reserved.</i>
+		  <i>Developed by Pprime` with a hell of a lot of help.  Hosted by Heroku. (c) 2021 All rights reserved.</i>
   </div>
 </div>
 
