--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,6 +3,9 @@
 <head>
   <%- include ("../partials/header.ejs") %>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.0/clipboard.min.js"></script>
+  <script> if (location.protocol !== 'https:') {
+    location.replace(`https:${location.href.substring(location.protocol.length)}`);
+  } </script>
   <script>
       window.onload = function() {
         var clipboard = new ClipboardJS('.btn');
