--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -23,13 +23,13 @@
   </div>
 
   <div id="lj-startup">
-      <!-- Remove option to create own game/room
+    <!-- Remove option to create own game/room
       <h1 class="display-7">Enter the Game ID Reference Number:</h1>
       <form id="start-group-form">
           <button type="submit" class="btn btn-primary" href="#" role="button">Start Group</button>
       </form>
       <hr class="my-4">
-      ---- snip -->
+     snip -->
       
       <h1 class="display-7">Enter the Geocaching ID Code for the game you wish to play:</h1>
       <form id="join-group-form">
@@ -50,7 +50,7 @@
       
       <p>Your distance from each waypoint currently is:</p>
       <!-- Insert List of each waypoint, show coords and radius target and current distance -->
-      <p><span id="waypoint-information" > </span></p>
+      <ul id="wpinfo"></ul>
   </div>
 
    <div class="alert alert-info text-center" role="alert">
