--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -50,7 +50,7 @@
       
       <p>Your distance from each waypoint currently is:</p>
       <!-- Insert List of each waypoint, show coords and radius target and current distance -->
-      <p><span id="wpinfo"></span></p>
+      <pre><span id="wpinfo"></span></pre>
   </div>
 
    <div class="alert alert-info text-center" role="alert">
