--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -51,7 +51,21 @@
       <p>Your distance from each waypoint currently is:</p>
       <!-- Insert List of each waypoint, show coords and radius target and current distance -->
       <pre><span id="wpinfo"></span></pre>
-  </div>
+      <!-- Insert Table here instead
+      Using variables passed from mocache-socket.js and/or server.js
+      	// TODO: Receive from server.js and pass to index.ejs?
+        // var pl.id WHERE id= '${socket.id}' // this is current player?
+        // var pl.location
+        // var pl.updated_at
+      
+        // var wp.name
+        // var wp.radius
+        // var distance
+      -->
+      <table><caption>Current Player: #Location and #Timestamp</caption>
+      <thead><tr>,th>Waypoint</th><th>Radius</th><th>My Distance</th><th>Other Player Distances</th></tr></thead>
+      <tbody><tr><td>#wp.name</td><td>#wp.radius</td><td>#distance</td><td>dist,dist,dist</td></tr></tbody></table>
+   </div>
 
    <div class="alert alert-info text-center" role="alert">
 		  <i>Developed by Pprime` with a hell of a lot of help.  Hosted by Heroku. (c) 2021 All rights reserved.</i>
