--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -63,8 +63,8 @@
         // var distance
       -->
       <table><caption>Current Player: #Location and #Timestamp</caption>
-      <thead><tr>,th>Waypoint</th><th>Radius</th><th>My Distance</th><th>Other Player Distances</th></tr></thead>
-      <tbody><tr><td>#wp.name</td><td>#wp.radius</td><td>#distance</td><td>dist,dist,dist</td></tr></tbody></table>
+      <thead><tr><th>Waypoint</th><th>Radius</th><th>My Distance</th><th>Other Player Distances</th></tr></thead>
+      <tbody><tr><td id=#wp.name></td><td id=#wp.radius></td><td id=#distance></td><td>dist1,dist2,dist3 ...</td></tr></tbody></table>
    </div>
 
    <div class="alert alert-info text-center" role="alert">
