--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -62,7 +62,7 @@
         // var wp.radius
         // var distance
       -->
-      <table><caption>Current Player: #Location and #Timestamp</caption>
+      <table border="1"><caption>Current Player: #Location and #Timestamp</caption>
       <thead><tr><th>Waypoint</th><th>Radius</th><th>My Distance</th><th>Other Player Distances</th></tr></thead>
       <tbody><tr><td id=#wp.name></td><td id=#wp.radius></td><td id=#distance></td><td>dist1,dist2,dist3 ...</td></tr></tbody></table>
    </div>
