--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -57,14 +57,16 @@
         // var pl.id WHERE id= '${socket.id}' // this is current player?
         // var pl.location
         // var pl.updated_at
-      
-        // var wp.name
+	// var distance
+	// var wp.name
         // var wp.radius
-        // var distance
-      -->
+	-->
+       
+       var wp=JSON.parse(wpinfo);
+               
       <table border="1"><caption>Current Player: #Location and #Timestamp</caption>
       <thead><tr><th>Waypoint</th><th>Radius</th><th>My Distance</th><th>Other Player Distances</th></tr></thead>
-      <tbody><tr><td id=wpname></td><td id=wpradius>m</td><td id=distance>m</td><td>dist1,dist2,dist3 ...</td></tr></tbody></table>
+      <tbody><tr><td id=wp.name></td><td id=wp.radius>m</td><td id=distance>m</td><td>dist1,dist2,dist3 ...</td></tr></tbody></table>
    </div>
 
    <div class="alert alert-info text-center" role="alert">
