--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -62,8 +62,10 @@
         // var wp.radius
 	-->
        
-       var wp=JSON.parse(wpinfo);
-               
+	<p><span id=distance></p>
+	<p><span id=wp.name></p>
+        <p><span id=wp.radius></p>
+	
       <table border="1"><caption>Current Player: #Location and #Timestamp</caption>
       <thead><tr><th>Waypoint</th><th>Radius</th><th>My Distance</th><th>Other Player Distances</th></tr></thead>
       <tbody><tr><td id=wp.name></td><td id=wp.radius>m</td><td id=distance>m</td><td>dist1,dist2,dist3 ...</td></tr></tbody></table>
