--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -62,9 +62,9 @@
         // var wp.radius
 	-->
        
-	<p><span id=distance></p>
-	<p><span id=wp.name></p>
-        <p><span id=wp.radius></p>
+	<p>Distance= <span id=distance></p>
+	<p>Waypoint= <span id=wp.name></p>
+        <p>Radius= <span id=wp.radius></p>
 	
       <table border="1"><caption>Current Player: #Location and #Timestamp</caption>
       <thead><tr><th>Waypoint</th><th>Radius</th><th>My Distance</th><th>Other Player Distances</th></tr></thead>
