--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -63,8 +63,8 @@
 	-->
        
 	<p>Distance= <span id=distance></p>
-	<p>Waypoint= <span id=wp.name></p>
-        <p>Radius= <span id=wp.radius></p>
+	<p>Waypoint= <span id=wpname></p>
+        <p>Radius= <span id=wpradius></p>
 	
       <table border="1"><caption>Current Player: #Location and #Timestamp</caption>
       <thead><tr><th>Waypoint</th><th>Radius</th><th>My Distance</th><th>Other Player Distances</th></tr></thead>
