--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -68,7 +68,7 @@
 	
       <table border="1"><caption>Current Player: #Location and #Timestamp</caption>
       <thead><tr><th>Waypoint</th><th>Radius</th><th>My Distance</th><th>Other Player Distances</th></tr></thead>
-      <tbody><tr><td id=wp.name></td><td id=wp.radius>m</td><td id=distance>m</td><td>dist1,dist2,dist3 ...</td></tr></tbody></table>
+      <tbody><tr><td ="<%= wp.name %>"></td><td ="<%= wp.radius %>">m</td><td = "<%= distance %>">m</td><td>dist1,dist2,dist3 ...</td></tr></tbody></table>
    </div>
 
    <div class="alert alert-info text-center" role="alert">
