--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -46,7 +46,7 @@
 <!-- <span><button type="button" class="btn btn-primary btn-clipboard" data-clipboard-target="#current-group-id">Copy</button></span> -->
 </p>
       <p>This game currently has <span id="current-group-member-count" class="badge badge-info"></span> active players</p>
-      <P>You are located at: <span id="current-location-and-time" class="badge badge-info" </span></p>
+      <p>You are located at: <span id="current-lat" class="badge badge-info" </span> <span id="current-lon" class="badge badge-info" </span></p>
       
       <p>Your distance from each waypoint currently is:</p>
       <!-- Insert List of each waypoint, show coords and radius target and current distance -->
