--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -64,13 +64,15 @@
 	-->
        
 	<p>Distance= <span id=distance></p>
+	<p>Distance= <span id="<%= distance%>">m</p>
+	
 	<p>Waypoint= <span id=wpname></p>
         <p>Radius= <span id=#wpradius></p>
 	 
       <!--
       <table border="1"><caption>Current Player: #Location and #Timestamp</caption>
       <thead><tr><th>Waypoint</th><th>Radius</th><th>My Distance</th><th>Other Player Distances</th></tr></thead>
-      <tbody><tr><td id="<%= wp.name%>"></td><td ="<%= wp.radius %>">m</td><td id="<%= distance%>">m</td><td>dist1,dist2,dist3 ...</td></tr></tbody></table>
+      <tbody><tr><td id="<$= wp.name%>"></td><td ="<$= wp.radius %>">m</td><td id="<%= distance%>">m</td><td>dist1,dist2,dist3 ...</td></tr></tbody></table>
       -->
    </div>
 
