--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -64,11 +64,22 @@
 	<p>Waypoint= <span id=wpname></p>
         <p>Radius= <span id=#wpradius></p>
 	 
-      <!-- Insert Table here instead
+      <!-- Insert Table here instead -->
       <table border="1"><caption>Current Player: #Location and #Timestamp</caption>
       <thead><tr><th>Waypoint</th><th>Radius</th><th>My Distance</th><th>Other Player Distances</th></tr></thead>
-      <tbody><tr><td id="<$= wp.name%>"></td><td ="<$= wp.radius %>">m</td><td id="<$= distance%>">m</td><td>dist1,dist2,dist3 ...</td></tr></tbody></table>
-      -->
+      <tbody>
+      <% var wp; %>
+      
+      <% for (var i = 0; i < wp.length; i++) { %>
+      <tr>
+         <td><%= wp[i].name %> </td>
+         <td><%= wp[i].radius %>m</td>
+         <td><%= wp[i].distance %>m</td>
+	 <td>dist1,dist2,dist3 ...</td>
+      </tr>    
+      <% } %>
+      </tbody></table>
+      
    </div>
    
    <!-- display a dump of the received data -->
