--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -70,7 +70,7 @@
       <tbody>
       <% var wp; %>
       
-      <% for (var i = 0; i < wp.length; i++) { %>
+      <% for (var i = 0; i < 2 i++) { %>
       <tr>
          <td><%= wp[i].name %> </td>
          <td><%= wp[i].radius %>m</td>
