--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -65,19 +65,20 @@
         <p>Radius= <span id=#wpradius></p>
 	
 	
-      <!-- Insert Table here showing Waypoints, My distance from each and other player's distance from each. Highlight a waypoint if "occupied" -->
+      <!-- Insert Table here showing Waypoints, My distance from each and other player's distance from each. Highlight a waypoint if "occupied"
       <table border="1"><caption>Current Player: #Location and #Timestamp Z</caption>
       <thead><tr><th>Waypoint</th><th>Radius</th><th>My Distance</th><th>Other Player Distances</th></tr></thead>
       <tbody>   
-      <% for (var i = 0; i < 2 i++) { %>
+      <$ for (var i = 0; i < 2 i++) { $>
       <tr>
          <td><$= wp[i].name $> </td>
          <td><$= wp[i].radius $>m</td>
          <td><$= wp[i].distance $>m</td>
 	 <td>dist1,dist2,dist3 ...</td>
       </tr>    
-      <% } %>
+      <$ } $>
       </tbody></table>
+      -->
    </div>
    
    <!-- display a straight dump of the received data for debugging -->
