--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -62,7 +62,7 @@
        
 	<p>Distance= <span id=distance></p>
 	<p>Waypoint= <span id=wpname></p>
-        <p>Radius= <span id=#wpradius></p>
+        <p>Radius= <span id=wpradius></p>
 	
 	
       <!-- Insert Table here showing Waypoints, My distance from each and other player's distance from each. Highlight a waypoint if "occupied"
