--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -66,14 +66,14 @@
       <table border="1"><caption>Current Player: #Location and #Timestamp Z</caption>
       <thead><tr><th>Waypoint</th><th>Radius</th><th>My Distance</th><th>Other Player Distances</th></tr></thead>
       <tbody>   
-      // <% for (var i = 0; i < 2 i++) { %>
+      <@ for (var i = 0; i < 2 i++) { @>   // replace the @s with %s once able to define variables. Also the 2 should be the maximum array number (wp.length?)
       <tr>
-      //   <td><%= wp[i].name %> </td>
-      //   <td><%= wp[i].radius %>m</td>
-      //   <td><%= wp[i].distance %>m</td>
-	 <td>dist1,dist2,dist3 sort this out next ...</td>
+        <td><@= wp[i].name @> </td>
+        <td><@= wp[i].radius @>m</td>
+        <td><@= wp[i].distance @>m</td>
+	<td>dist1,dist2,dist3 sort this out next ...</td>
       </tr>    
-      //<% } %>
+      <@ } @>
       </tbody></table>
       -->
    </div>
