--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -12,7 +12,7 @@
         var clipboard = new ClipboardJS('.btn');
       }
   </script>
-  <script type="text/javascript" src="/js/mobcache-socketio.js"></script>
+  <script type="text/javascript" src="/js/client.js"></script>
 </head>
 
 <body>
