--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -79,6 +79,9 @@
    </div>
    
    <!-- display a straight dump of the received data for debugging -->
+   <p><b>DISPLAYINFO:</b></p>
+   <pre><span id="displayinfo"></span></pre>
+   </br><p><b>WPINFO:</b></p>
    <pre><span id="wpinfo"></span></pre>
    
    <div class="alert alert-info text-center" role="alert">
