--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -75,14 +75,18 @@
       </tr>    
       <@ } @>
       </tbody></table>
-      -->
-   </div>
-   
-   <!-- display a straight dump of the received data for debugging -->
+       
    <p><b>DISPLAYINFO:</b></p>
+     -->
+     
    <pre><span id="displayinfo"></span></pre>
-   </br><p><b>WPINFO:</b></p>
+   
+ </div>
+   
+   <!-- display a straight dump of the received data for debugging 
+   <!--  </br><p><b>WPINFO:</b></p>
    <pre><span id="wpinfo"></span></pre>
+   -->
    
    <div class="alert alert-info text-center" role="alert">
 	  <i>Developed by Pprime` with a hell of a lot of help.  Hosted by Heroku. (c) 2021 All rights reserved.</i>
