--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -76,15 +76,14 @@
       <@ } @>
       </tbody></table>
        
-   <p><b>DISPLAYINFO:</b></p>
+      <p><b>DISPLAYINFO:</b></p>
      -->
-     
-   <pre><span id="displayinfo"></span></pre>
+      <pre><span id="displayinfo"></span></pre>
    
  </div>
    
    <!-- display a straight dump of the received data for debugging 
-   <!--  </br><p><b>WPINFO:</b></p>
+   </br><p><b>WPINFO:</b></p>
    <pre><span id="wpinfo"></span></pre>
    -->
    
