--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -48,36 +48,17 @@
       <p>This game currently has <span id="current-group-member-count" class="badge badge-info"></span> active players</p>
       <p>You are located at: <span id="current-Lat" class="badge badge-info"></span>, <span id="current-Lon" class="badge badge-info"></span></p>
       
-      <p>Your distance from each waypoint currently is:</p>
       <!-- Insert List of each waypoint, show coords and radius target and current distance -->
       <!-- TODO: Receive array of data from server.js and pass to index.ejs?
         // var pl.id WHERE id= '${socket.id}' // this is current player?
-        // var pl.location
-        // var pl.updated_at
-	// var distance
-	// var wp.name
-        // var wp.radius
-	-->
+        
+	<p>Your distance from each waypoint currently is:</p>   
        	<p>Waypoint= <span id=wpname></p>
         <p>Radius= <span id=wpradius></p>
 	<p>Distance= <span id=distance></p>
+       -->
 	
-      <!-- Insert Table here showing Waypoints, My distance from each and other player's distance from each. Highlight a waypoint if "occupied"
-      <table border="1"><caption>Current Player: #Location and #Timestamp Z</caption>
-      <thead><tr><th>Waypoint</th><th>Radius</th><th>My Distance</th><th>Other Player Distances</th></tr></thead>
-      <tbody>   
-      <@ for (var i = 0; i < 2 i++) { @>   // replace the @s with %s once able to define variables. Also the 2 should be the maximum array number (wp.length?)
-      <tr>
-        <td><@= wp[i].name @> </td>
-        <td><@= wp[i].radius @>m</td>
-        <td><@= wp[i].distance @>m</td>
-	<td>dist1,dist2,dist3 sort this out next ...</td>
-      </tr>    
-      <@ } @>
-      </tbody></table>
-       
-      <p><b>DISPLAYINFO:</b></p>
-     -->
+      <!-- Insert Table here showing Waypoints, My distance from each and other player's distance from each. Highlight a waypoint if "occupied"       -->
       <pre><span id="displayinfo"></span></pre>
    
  </div>
