--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -48,7 +48,7 @@
       <p>This game currently has <span id="current-group-member-count" class="badge badge-info"></span> active players</p>
       <p>You are located at: <span id="current-Lat" class="badge badge-info"></span>, <span id="current-Lon" class="badge badge-info"></span></p>
       
-      <!-- Insert Table here showing Waypoints, My distance from each and other player's distance from each. Highlight a waypoint if "occupied"       -->
+      <!-- Show all Players and Waypoints, target and current distance from each. Highlight a waypoint if "occupied"       -->
       <pre><span id="displayinfo"></span></pre>
    
  </div>
