--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -43,8 +43,9 @@
 
   <div id="lj-in-game" style="display: none">
       <p>Game Code: <span id="current-group-id" class="badge badge-secondary"></span>
-      <!-- <span><button type="button" class="btn btn-primary btn-clipboard" data-clipboard-target="#current-group-id">Copy</button></span> -->
+      <span><button type="button" class="btn btn-primary btn-clipboard" data-clipboard-target="#current-group-id">Copy Code</button></span>
       </p>
+      <p><span id="game-description"></p>
       <p>This game currently has <span id="current-group-member-count" class="badge badge-info"></span> active players</p>
       <p>You are located at: <span id="current-Lat" class="badge badge-info"></span>, <span id="current-Lon" class="badge badge-info"></span></p>
       
