--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -43,7 +43,7 @@
 
   <div id="lj-in-game" style="display: none">
       <p>Game Code: <span id="current-group-id" class="badge badge-secondary"></span>
-      <span><button type="button" class="btn btn-primary btn-clipboard" data-clipboard-target="#current-group-id">Copy Code</button></span>
+      <span><button type="button" class="btn btn-secondary btn-sm btn-clipboard" data-clipboard-target="#current-group-id">Copy Code</button></span>
       </p>
       <p><span id="game-description"></p>
       <p>This game currently has <span id="current-group-member-count" class="badge badge-info"></span> active players</p>
