--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -42,9 +42,9 @@
   </div>
 
   <div id="lj-in-game" style="display: none">
-      <p>Game Code: <span id="current-group-id" class="badge badge-secondary"></span>
+      <h1>Game Code: <span id="current-group-id" class="badge badge-secondary"></span>
       <span><button type="button" class="btn btn-secondary btn-sm btn-clipboard" data-clipboard-target="#current-group-id">Copy Code</button></span>
-      </p>
+      </h1>
       <p><span id="game-description"></p>
       <p>This game currently has <span id="current-group-member-count" class="badge badge-info"></span> active players</p>
       <p>You are located at: <span id="current-Lat" class="badge badge-info"></span>, <span id="current-Lon" class="badge badge-info"></span></p>
