--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -46,8 +46,11 @@
    
  </div>
    
- <div id="lj-reward" style="container-fluid">
+ <div id="lj-reward" style="display: none">
    <!-- Show Reward screen -->
+     <div class="alert alert-info text-center" role="alert" width: 100vw>
+	  <pre><span id="rewardinfo"></span></pre>
+  </div>
  </div>
   
  <div class="alert alert-info text-center" role="alert" width: 100vw>
